src/objects/Vendor_Monthly_Data__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Before_GST__c</fullName>
        <label>Amount Before GST</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pagination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insertion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copies__c</fullName>
        <label>Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Debit__c</fullName>
        <label>Credit/Debit</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Period__c</fullName>
        <label>Credit Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Amount__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit_Note_No__c</fullName>
        <label>Debit Note No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Period__c</fullName>
        <label>Debit Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee__c</fullName>
        <formula>IF(ISPICKVAL(Amount_Type__c,&apos;Delivery Fee&apos;), Credit_Amount__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Amount__c</fullName>
        <label>GST Amount</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grand_Total2__c</fullName>
        <description>D-1254</description>
        <formula>Total2__c +  Delivery_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>IF(ISPICKVAL(Amount_Type__c,&quot;Delivery Fee&quot;), Amount_Before_GST__c +  Total__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handling_Fee__c</fullName>
        <formula>IF(ISPICKVAL(Amount_Type__c,&apos;Handling Fee&apos;), Credit_Amount__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handling Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insertion_Fee__c</fullName>
        <formula>IF(ISPICKVAL(Amount_Type__c,&apos;Insertion&apos;), Credit_Amount__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insertion Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Normalized_View__c</fullName>
        <formula>IF(ISPICKVAL(Credit_Debit__c, &apos;Credit&apos;), &apos;C&apos;, &apos;D&apos;)   +
LPAD(TEXT(Debit_Note_No__c), 12,&apos;0&apos;) + 
RPAD(Vendor_Group__c, 1, &apos;.&apos;) +
RPAD(Vendor_Number__c, 5, &apos;.&apos;) +
RPAD(Publication_Code__c, 4, &apos;.&apos;) + 
IF(ISPICKVAL(Amount_Type__c, &apos;Commission&apos;), &apos;C&apos;, IF(ISPICKVAL(Amount_Type__c, &apos;Pagination&apos;), &apos;P&apos;, IF(ISPICKVAL(Amount_Type__c, &apos;Delivery Rate&apos;), &apos;R&apos;, IF(ISPICKVAL(Amount_Type__c, &apos;Insertion&apos;), &apos;I&apos;,  IF(ISPICKVAL(Amount_Type__c, &apos;Delivery Fee&apos;), &apos;D&apos;, &apos;M&apos;) ) ) ) ) +
LPAD(TEXT(Amount_Before_GST__c), 14,&apos;0&apos;) +
LPAD(TEXT(GST_Amount__c), 14,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Normalized View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Number__c</fullName>
        <label>Note Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Vendor Monthly Data</relationshipLabel>
        <relationshipName>Vendor_Monthly_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Vendor Monthly Data</relationshipLabel>
        <relationshipName>Vendor_Monthly_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total2__c</fullName>
        <description>D-1254</description>
        <formula>Handling_Fee__c  +  Insertion_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Amount_Before_GST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Monthly Data</relationshipLabel>
        <relationshipName>Vendor_Monthly_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Monthly Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription__c</field>
            <operation>contains</operation>
            <value>BA-S01715274</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VMD-{0000000000}</displayFormat>
        <label>Vendor Monthly Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Monthly Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>